# pandas-text-comparer

./: LICENSE  README.md  pyproject.toml
src/pandas-text-comparer/: __init__.py  comparer.py
src/pandas_text_comparer/: __init__.py  comparer.py
